<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="198dp"
        android:text="@string/echelon"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editEch"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/list_time"
        android:layout_alignBottom="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="valeur" />

    <Button
        android:id="@+id/editRunnerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/list_time"
        android:layout_marginEnd="-178dp"
        android:layout_toStartOf="@+id/nomEdit"
        android:text="Editer " />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/matEdit"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:text="Matricule"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/matEdit"
        android:layout_width="149dp"
        android:layout_height="34dp"
        android:layout_below="@+id/textTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/matricule" />

    <EditText
        android:id="@+id/nomEdit"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/matEdit"
        android:layout_alignParentStart="true"
        android:layout_marginStart="178dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="105dp"
        android:text="Nom"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/list_time"
        android:layout_width="313dp"
        android:layout_height="215dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="37dp"
        android:background="#D8D8D8"
        android:text="@string/table_manifestation_1" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="9dp"
        android:text="Info courreur"
        android:textSize="25sp" />



</RelativeLayout>